Updates to gene expression scripts

--- a/Analysis/2022-01-24_Rbook_Adjust_Expression.ipynb
+++ b/Analysis/2022-01-24_Rbook_Adjust_Expression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Adjusting expression for significant cofactors using MLR residuals.\n",
+    "# Adjust expression for significant cofactors using MLR residuals.\n",
     "Age and Ischemic minutes were found to be correlated in many genes across tissues (see `2021-12-30_GTExReviewerCopyNumber_Sex_Age_Ischem` for stat tests).\n",
     "Using processed and annotated expression dataset (produced in `2021-04-16_GTExPortaldata.ipynb`) we produce an MLR for each gene/tissue combination and use the residuals as the adjusted expression.\n",
     "\n",
@@ -73,7 +73,7 @@
     }
    ],
    "source": [
-    "# Load libraries.\n",
+    "# Load R libraries.\n",
     "library(tidyr)\n",
     "library(dplyr)\n",
     "library(patchwork)\n",
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get the annotated TPM file."
+    "## Import the annotated TPM file."
    ]
   },
   {
@@ -522,16 +522,16 @@
     }
    ],
    "source": [
-    "# GTEx dataset with genotype data (e.g. Skeletal muscle has N=665)\n",
-    "df_tpm = read.table(\"/Users/edmundo/Documents/GitHub/mitonuclear_gtex/mitonucl/bin/gtexportal_v8_tpm_ann_K2.mt\", header=TRUE, sep=\"\\t\")\n",
-    "df_tpm# %>% filter(Tissue == 'Muscle - Skeletal') %>% select(short_ID) %>% unique()"
+    "# GTEx dataset with genotype data.\n",
+    "df_tpm = read.table(\"gtexportal_v8_tpm_ann_K2.mt\", header=TRUE, sep=\"\\t\")\n",
+    "df_tpm"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get file with relevant phenotypes."
+    "## Import available phenotypes (requires dbGap access)."
    ]
   },
   {
@@ -2310,7 +2310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Remake Figure 4 with adjusted expression values."
+    "# Values for Figure 4 using adjusted expression values."
    ]
   },
   {
