Update local vs global ancestry script.

--- a/Analysis/compare_local_and_global_ancestries/local_ancestry_vs_global_ancestry.ipynb
+++ b/Analysis/compare_local_and_global_ancestries/local_ancestry_vs_global_ancestry.ipynb
@@ -158,9 +158,10 @@
     }
    ],
    "source": [
+    "# Concatenate ADMIXTURE global ancestry output files (.Q) for all chromosomes into one file.\n",
     "def concat_Qfiles():\n",
     "    out = pd.DataFrame()\n",
-    "    # Concatenate files with global ancestry estimates at the chromosome-level.\n",
+    "    # Concatenate files of global ancestry estimates at the chromosome-level.\n",
     "    for CHR in range(1,23):\n",
     "        one_chr = pd.read_table('../data/2021-05-10/rfmixout/rfmixout.'+str(CHR)+'.rfmix.Q', skiprows=1)\n",
     "        one_chr.rename(columns={'#sample':'Sample'}, inplace=True)\n",
@@ -180,6 +181,7 @@
     "    return(dict_grch37_chr_prop)\n",
     "\n",
     "\n",
+    "# Convert local ancestry (from RFMix) estimates into global ancestry estimates.\n",
     "def rfmix_chr_to_global():\n",
     "    # The chromosome-level diploid ancestry values.\n",
     "    all_chr = concat_Qfiles()\n",
@@ -545,167 +547,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Remake the global ancestry, mitohaplo merge."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m~/miniconda3/envs/ejt_works2/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m   2036\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2037\u001b[0;31m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2038\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader.read\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._read_low_memory\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._read_rows\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._convert_column_data\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._convert_tokens\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._convert_with_dtype\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/ejt_works2/lib/python3.7/site-packages/pandas/core/dtypes/common.py\u001b[0m in \u001b[0;36mis_categorical_dtype\u001b[0;34m(arr_or_dtype)\u001b[0m\n\u001b[1;32m    541\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 542\u001b[0;31m \u001b[0;32mdef\u001b[0m \u001b[0mis_categorical_dtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr_or_dtype\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mbool\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    543\u001b[0m     \"\"\"\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/fq/63_fsbc110s_4lv0n6kgz4900000gn/T/ipykernel_48281/727661833.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[0;31m#df_tpm = pd.read_table(\"../data/viaGTExPortal/GTEx_Analysis_2017-06-05_v8_RNASeQCv1.1.9_gene_tpm.gct\", skiprows=[0,1])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[0;31m#df_tpm.to_csv(\"gtexportal_v8_tpm_ann.mt.tab\", sep='\\t')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 55\u001b[0;31m \u001b[0mdf_tpm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_table\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"gtexportal_v8_tpm_ann.mt.tab\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'\\t'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     56\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0;31m# Wrangle the GTEx Portal v8 \"gene TPMs\" file.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/ejt_works2/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mparser_f\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision)\u001b[0m\n\u001b[1;32m    674\u001b[0m         )\n\u001b[1;32m    675\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 676\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    677\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    678\u001b[0m     \u001b[0mparser_f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/ejt_works2/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    452\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    453\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 454\u001b[0;31m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    455\u001b[0m     \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    456\u001b[0m         \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/ejt_works2/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m   1131\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1132\u001b[0m         \u001b[0mnrows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_validate_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"nrows\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1133\u001b[0;31m         \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1134\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1135\u001b[0m         \u001b[0;31m# May alter columns / col_dict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/ejt_works2/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m   2035\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2036\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2037\u001b[0;31m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2038\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2039\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_first_chunk\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "# Input mt haplogroup info for GTEx samples.\n",
-    "def get_haplo():\n",
-    "    df_haplo = pd.read_table(\"/Users/edmundo/Documents/GitHub/mitonuclear_gtex/mitonucl/data/2021-04-09/ids_aa_ea_GTEx_v8.haplo\", header=None)\n",
-    "    df_haplo.columns = ['short_ID','mt_haplo','pop']\n",
-    "    df_haplo['pop'] = [{3:'EuAm',2:'AfAm'}[x] for x in df_haplo['pop']]\n",
-    "    df_haplo['mt_haplo_pop'] = [ {'L':'African','H':'Eurasian','U':'Eurasian','T':'Eurasian','J':'Eurasian',\n",
-    "                                  'K':'Eurasian','I':'Eurasian','V':'Eurasian','W':'Eurasian','X':'Eurasian',\n",
-    "                                  'C':'Native American','B':'Native American','A':'Native American',\n",
-    "                                  'Z':'Asian','F':'Asian','R':'Eurasian?','M':'Eurasian?','N':'Eurasian?'}[x] for x in df_haplo['mt_haplo']]\n",
-    "    return(df_haplo)\n",
-    "\n",
-    "# Input qlobal ancestry estimated for K=2 using ADMIXTURE.\n",
-    "def get_global():\n",
-    "    df_ids = pd.read_table(\"/Users/edmundo/Documents/GitHub/mitonuclear_gtex/mitonucl/data/2021-04-09/NATMERG-WGS-ALL_biall_nopal_filt_common_pruned_keep2.ids\", header=None)\n",
-    "    df_ids.columns = ['short_ID']\n",
-    "    df_ids = df_ids.reset_index()\n",
-    "    #return(df_ids)\n",
-    "    df_Q = pd.read_table(\"/Users/edmundo/Documents/GitHub/mitonuclear_gtex/mitonucl/data/2021-04-09/NATMERG-WGS-ALL_biall_nopal_filt_common_pruned_keep2.2.Q\", header=None, sep=' ')\n",
-    "    df_Q.columns = ['anc_afr','anc_eur']\n",
-    "    df_Q = df_Q.reset_index()\n",
-    "    #return(df_Q)\n",
-    "    df_glob = pd.merge(df_ids,df_Q, on='index').drop(columns=['index'])\n",
-    "    return(df_glob)\n",
-    "    \n",
-    "# Compute mitonuclear DNA discordance.\n",
-    "def recalc_mnd(ann):\n",
-    "    col_mnd=[]\n",
-    "    for i,val in enumerate(ann['mt_haplo_pop']):\n",
-    "        # Estimate mitonuclear discordance.\n",
-    "        if val == 'African':\n",
-    "            mnd = 1 - ann['anc_afr'].iloc[i]\n",
-    "        elif val == 'Eurasian':\n",
-    "            mnd = 1 - ann['anc_eur'].iloc[i]\n",
-    "        elif val != 'African' or val != 'Eurasian':\n",
-    "            mnd = \"Unknown\"\n",
-    "        # Output the MND value.\n",
-    "        col_mnd.append(mnd)\n",
-    "    return(col_mnd)\n",
-    "\n",
-    "# Merge these annotations into one file.\n",
-    "def join_global_haplo():\n",
-    "    df_ann = pd.merge( get_global() , get_haplo() ,on='short_ID')\n",
-    "    #return(df_ann)\n",
-    "    df_ann['mnd'] = recalc_mnd(df_ann)\n",
-    "    return(df_ann)\n",
-    "\n",
-    "\n",
-    "### Input the GTEx TPM file. ###\n",
-    "# Do not use. Old and missing haplogroups.\n",
-    "###df_tpm = pd.read_table('../results/2021-04/gtexportal_v8_tpm_ann.mt', sep='\\t')[['Gene','GTEX_ID','TPM','short_ID','Tissue']]\n",
-    "\n",
-    "# Very intensive step:\n",
-    "#df_tpm = pd.read_table(\"../data/viaGTExPortal/GTEx_Analysis_2017-06-05_v8_RNASeQCv1.1.9_gene_tpm.gct\", skiprows=[0,1])\n",
-    "#df_tpm.to_csv(\"gtexportal_v8_tpm_ann.mt.tab\", sep='\\t')\n",
-    "df_tpm = pd.read_table(\"gtexportal_v8_tpm_ann.mt.tab\", sep='\\t')\n",
-    "\n",
-    "# Wrangle the GTEx Portal v8 \"gene TPMs\" file.\n",
-    "def wrangle_tpm( counts ):\n",
-    "    # Keep mtDNA protein coding genes.\n",
-    "    # The list of mtDNA protein-coding genes.\n",
-    "    list_mtdna = [ 'MT-ND1','MT-ND2','MT-CO1','MT-CO2','MT-ATP8','MT-ATP6','MT-CO3','MT-ND3','MT-ND4L','MT-ND4','MT-CYB','MT-ND5','MT-ND6' ]\n",
-    "    counts_mt = counts[counts['Description'].isin(list_mtdna)]  \n",
-    "    # Move individual IDs into rows.\n",
-    "    counts_mt = counts_mt.melt(id_vars=['Name','Description'], var_name='GTEX_ID', value_name='TPM')\n",
-    "    # Change header names.\n",
-    "    counts_mt = counts_mt.rename(columns={'Name':'ENS_ID','Description':'Gene'})\n",
-    "    # Get rid of the Ensemble gene IDs.\n",
-    "    counts_mt.drop('ENS_ID', inplace=True, axis=1)\n",
-    "    # \n",
-    "    counts_mt['short_ID'] = [\"-\".join(x.split('-')[:2]) for x in df_wrangled['GTEX_ID']]\n",
-    "    return(counts_mt)\n",
-    "\n",
-    "# Remove the gene ID prefix \"MT-\".\n",
-    "def remove_mt_prefix(df):\n",
-    "    dict_mtdna = {'MT-ND1':'ND1','MT-ND2':'ND2','MT-CO1':'CO1','MT-CO2':'CO2','MT-ATP8':'ATP8','MT-ATP6':'ATP6','MT-CO3':'CO3','MT-ND3':'ND3','MT-ND4L':'ND4L','MT-ND4':'ND4','MT-ND5':'ND5','MT-CYB':'CYB','MT-ND6':'ND6'}\n",
-    "    new_col = [dict_mtdna[gene] for gene in df['Gene']]\n",
-    "    return(new_col)\n",
-    "\n",
-    "# Join the TPM and annotations of global ancestry, mt haplogroup, and mitonuclear discordance.\n",
-    "def join_tpm_ann(counts):\n",
-    "    # Global anc and mt haplogroup annotations.\n",
-    "    df_ann = join_global_haplo()\n",
-    "    # Add the info to the merged raw counts.\n",
-    "    ann_counts = pd.merge( wrangle_tpm(counts), df_ann )\n",
-    "    # Remove \"MT-\" prefix.\n",
-    "    ann_counts['Gene'] = remove_mt_prefix(ann_counts)\n",
-    "    return(ann_counts)\n",
-    "\n",
-    "\n",
-    "#get_haplo()\n",
-    "#get_global()\n",
-    "#join_global_haplo()\n",
-    "#df_tpm_ann = join_tpm_ann()\n",
-    "#df_tpm_ann['Gene'] = remove_mt_prefix(df_tpm_ann)\n",
-    "#df_wrangled = wrangle_tpm(df_tpm)\n",
-    "df_tpm_ann = join_tpm_ann(df_tpm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df_tpm.to_csv(\"gtexportal_v8_tpm_ann.mt.tab\", sep='\\t')"
-   ]
   },
   {
    "cell_type": "code",
